移动端英文版

--- a/common/footer-en.html
+++ b/common/footer-en.html
@@ -73,7 +73,7 @@
 							<div class="widget-content">
 								<div class="text"><img src="images/ewm.jpg"></div>
 							</div>
-							<h5>Micro world</h5>
+							<h5>CHONGQING YANFENG ADIENT<br>Micro world</h5>
 						</div>
 					</div>
 				</div>
