--- a/m/news-en.html
+++ b/m/news-en.html
@@ -12,7 +12,7 @@
 <!--End MasterSlider-->
 
 <link href="css/slick.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<!-- <link href="css/responsive.css" rel="stylesheet"> -->
 <link href="css/style.css" rel="stylesheet">
 
 
@@ -22,197 +22,193 @@
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-<!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 <style type="text/css">
 .self-color1{
-    color: rgba(15,113,142,1);;
+    color: rgba(15,113,142,1);
 }
-.page-wrapper{
-    height: auto;
-}
-#pagination{
-    text-align: center;
-}
-#pagination .pagination{
-    justify-content: center;
-}
-.news-content{
-    padding: 0 50px;
+.news-content {
+    margin: 0 10px;
     position: relative;
     margin-top: -20px;
     z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #fff;
+    padding: 5px;
 }
 .item-box{
-	position: relative;
-}
-.content-box1,.news-list{
-    max-width: 1000px;
+    position: relative;
 }
 .content-box1{
     display: flex;
     flex-wrap: wrap;
-    max-width: 1002px;
 }
-.content-box1 .item-box{
-    width:33.3333333333%;
+.content-box1 .item-box {
+    width: 50%;
 }
-.content-box1 .my-column-center{
-    padding: 0 30px;
+.content-box1 .my-column{
+    padding: 10px;
+    position: relative;
+    height: 100%;
 }
 .content-box1 .lable-text{
-    margin-bottom: 10px;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
+.content-box1 .text{
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    line-height: 21px;
+}
+.content-box1 .time{
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+}
+
 .news-list{
-    margin-bottom: 20px;
     width: 100%;
-}
-.news-list .item-box{
     margin-top: 20px;
-    display: flex;
+    overflow: hidden;
 }
-.news-list .item-box img{
+.news-list .cont1{
     width: 100%;
+    height: 15px;
 }
-.news-list .item-box .item1{
-    flex: 1;
+.news-list .cont2{
+    margin: 5px 0;
+    text-align: center;
 }
-.news-list .item-box .item2{
-    flex: 2;
-    background-color: #e4e4e6;
+.news-list .cont3{
+    height: 40px;
+    line-height: 40px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #999;
 }
-.cont-text1{
-    margin-left: 25px;
-    padding: 30px 0 15px;
-    border-bottom: 2px solid #c6c6c6;
+.news-list .cont3 .text{
+    /* width: 80%; */
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
-.cont-text2{
-    padding: 10px  10px 10px 25px;
+.news-list .cont3 .time{
+    white-space: nowrap;
+}
+.news-list .cont4{
+    margin: 5px 0 20px 0;
+    line-height: 21px;
 }
 </style>
 </head>
 
 <body>
+<div id="root">
 <!-- Main Header-->
 <div id="headerBox" data-type="news"></div>
 <!--End Main Header -->
-<div class="page-wrapper" id="index">
-	
- 	
+<div class="page-wrapper" id="news">
+    <div class="go-top"><img src="images/icons/go-top.png"></div>
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
-    <section class="main-slider">
+    <!-- <section class="main-slider">
         <div class="main-slider-carousel owl-carousel owl-theme">
             <div class="slide">
 				<img src="images/news/banner.jpg">
 			</div>
         </div>
+    </section> -->
+    <section>
+        <img src="images/news/banner.jpg">
     </section>
     <!--End Main Slider-->
     <!--新闻列表-->
     <section class="news-content">
-        <div class="content-box1 my-color1">
+        <div class="content-box1 my-color1 my-font3">
             <div class="item-box">
                 <img src="images/news/1-1.jpg">
             </div>
             <div class="item-box my-bg-color2">
-                <!-- <img src="images/news/1-2.jpg"> -->
-                <div class="my-column-center">
+                <div class="my-column">
                     <div class="my-font1 self-color1 lable-text">沃尔沃XC40</div>
-                    <div>沃尔沃首次进军小型SUV细分市场XC40保持一贯低调的北欧设计风格</div>
+                    <div class="text">沃尔沃首次进军小型SUV细分市场XC40保持一贯低调的北欧设计风格</div>
+                    <div class="time">2017-04</div>
                 </div>
-            </div>
-            <div class="item-box">
-                <img src="images/news/1-3.jpg">
             </div>
             <div class="item-box my-bg-color3">
                 <!-- <img src="images/news/1-4.jpg"> -->
-                <div class="my-column-center">
+                <div class="my-column">
                     <div class="my-font1 my-color2 lable-text">蔚来ES8</div>
-                    <div>北京车展人气明星，顶级流量首次发布新车型-6座
+                    <div class="text">北京车展人气明星，顶级流量首次发布新车型-6座
                         ES8采用“2+2+2”顶级流量首次发布新车型顶级流量首次发布新车型</div>
+                    <div class="time">2017-04</div>
                 </div>
             </div>
             <div class="item-box">
-                <img src="images/news/1-5.jpg">
-            </div>
-            <div class="item-box my-bg-color2">
-                <!-- <img src="images/news/1-6.jpg"> -->
-                <div class="my-column-center">
-                    <div class="my-font1 self-color1 lable-text">沃尔沃XC40</div>
-                    <div>沃尔沃首次进军小型SUV细分市场XC40保持一贯低调的北欧设计风格</div>
-                </div>
+                <img src="images/news/1-2.jpg">
             </div>
         </div>
-        <div class="news-list">
-            <div class="item-box">
-                <div class="item1"><img src="images/news/item-1.jpg"></div>
-                <div class="item2">
-                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
-                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+        <div class="news-list" class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="content">
+                        <div class="cont1 my-bg-color3"></div>
+                        <div class="cont2"><img src="images/news/item-1.jpg"></div>
+                        <div class="cont3">
+                            <div class="text self-color1 my-font1">沃尔沃XC40沃尔沃XC40沃尔沃XC40沃尔沃XC40沃尔沃XC40沃尔沃XC40沃尔沃XC40沃尔沃XC40沃尔沃XC40</div>
+                            <div class="time">2017-04</div>
+                        </div>
+                        <div class="cont4">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                    </div>
+                    <div class="content">
+                        <div class="cont1 my-bg-color3"></div>
+                        <div class="cont2"><img src="images/news/item-1.jpg"></div>
+                        <div class="cont3">
+                            <div class="text self-color1 my-font1">沃尔沃XC40</div>
+                            <div class="time">2017-04</div>
+                        </div>
+                        <div class="cont4">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                    </div>
                 </div>
-            </div>
-            <div class="item-box">
-                <div class="item1"><img src="images/news/item-1.jpg"></div>
-                <div class="item2">
-                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
-                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
-                </div>
-            </div>
-            <div class="item-box">
-                <div class="item1"><img src="images/news/item-1.jpg"></div>
-                <div class="item2">
-                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
-                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
-                </div>
-            </div>
-            <div class="item-box">
-                <div class="item1"><img src="images/news/item-1.jpg"></div>
-                <div class="item2">
-                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
-                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
-                </div>
-            </div>
-            <div class="item-box">
-                <div class="item1"><img src="images/news/item-1.jpg"></div>
-                <div class="item2">
-                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
-                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                <div class="swiper-slide">
+                    <div class="content">
+                        <div class="cont1 my-bg-color3"></div>
+                        <div class="cont2"><img src="images/news/item-1.jpg"></div>
+                        <div class="cont3">
+                            <div class="text self-color1 my-font1">沃尔沃XC40</div>
+                            <div class="time">2017-04</div>
+                        </div>
+                        <div class="cont4">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                    </div>
+                    <div class="content">
+                        <div class="cont1 my-bg-color3"></div>
+                        <div class="cont2"><img src="images/news/item-1.jpg"></div>
+                        <div class="cont3">
+                            <div class="text self-color1 my-font1">沃尔沃XC40</div>
+                            <div class="time">2017-04</div>
+                        </div>
+                        <div class="cont4">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <nav id="pagination" aria-label="Page navigation">
-            <ul class="pagination pagination-lg">
-              <li>
-                <a href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li>
-                <a href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
 	<!--Main Footer-->
 	<div id="footerBox"></div>
 	<!--End Main Footer-->
 	
 </div>
 <!--End pagewrapper-->
-
+</div>
 <script src="js/jquery.js"></script>
 <script src="my-js/common.js"></script>
 <script src="js/popper.min.js"></script>
@@ -228,11 +224,13 @@
 <script src="js/masterslider/jquery.easing.min.js"></script>
 <script src="js/masterslider/masterslider.min.js"></script>
 <!--End Master Slider -->
+<script src="js/swiper.js"></script>
 
 <script src="js/script.js"></script>
+<script src="my-js/news.js"></script>
 <script type="text/javascript">
-    $('.news-list .item-box').click(function(){
-        window.location.href = 'news-detail.html';
+    $('.news-list .content').click(function(){
+        window.location.href = 'news-detail-en.html';
     })
 </script>
 
