--- a/m/news.html
+++ b/m/news.html
@@ -120,12 +120,15 @@
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
-    <section class="main-slider">
+    <!-- <section class="main-slider">
         <div class="main-slider-carousel owl-carousel owl-theme">
             <div class="slide">
 				<img src="images/news/banner.jpg">
 			</div>
         </div>
+    </section> -->
+    <section>
+        <img src="images/news/banner.jpg">
     </section>
     <!--End Main Slider-->
     <!--新闻列表-->
