--- a/m/news-detail-en.html
+++ b/m/news-detail-en.html
@@ -42,13 +42,14 @@
 .news-header{
     text-align: center;
     border-bottom: 1px solid #104e5a;
-    margin: 30px 0 20px;
+    margin: 20px 0 20px;
     width: 100%;
 }
 .news-title1{
     color: #104e5a;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 600;
+    padding: 0 10px;
 }
 .news-title2{
     margin: 5px 0;
@@ -57,34 +58,37 @@
 	position: relative;
 }
 .content-box1{
-    text-align: center;
+    /* text-align: center; */
 }
 .content-box1 .item-box{
     width: 100%;
 }
 .back-box{
     text-align: center;
-    margin: 40px;
+    margin: 20px;
 }
 </style>
 </head>
 
 <body>
 <!-- Main Header-->
-<div id="headerBox" data-type="news"></div>
+<div id="headerBox" data-type="news-detail"></div>
 <!--End Main Header -->
-<div class="page-wrapper" id="index">
-	
+<div class="page-wrapper" id="news-detail">
+    <div class="go-top"><img src="images/icons/go-top.png"></div>
  	
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
-    <section class="main-slider">
+    <!-- <section class="main-slider">
         <div class="main-slider-carousel owl-carousel owl-theme">
             <div class="slide">
 				<img src="images/news/banner.jpg">
 			</div>
         </div>
+    </section> -->
+    <section>
+        <img src="images/news/banner.jpg">
     </section>
     <!--End Main Slider-->
     <section class="news-content">
@@ -96,10 +100,10 @@
             </div>
         </div>
         <div class="content-box1">
-            <div class="item-box"><img src="images/news/detail-1-2.jpg"></div>
-            <div class="item-box"><img src="images/news/detail-1-3.jpg"></div>
-            <div class="item-box"><img src="images/news/detail-1-4.jpg"></div>
-            <div class="item-box"><img src="images/news/detail-1-5.jpg"></div>
+            <div class="item-box"><img src="images/news/banner.jpg"></div>
+            <div class="item-box"><img src="images/news/banner.jpg"></div>
+            <div class="item-box"><img src="images/news/banner.jpg"></div>
+            <div class="item-box"><img src="images/news/banner.jpg"></div>
         </div>
     </section>
     <div class="back-box"><img class="back-btn" src="images/news/detail-1-6.jpg"></div>
@@ -125,11 +129,13 @@
 <script src="js/masterslider/jquery.easing.min.js"></script>
 <script src="js/masterslider/masterslider.min.js"></script>
 <!--End Master Slider -->
+<script src="js/swiper.js"></script>
 
 <script src="js/script.js"></script>
+<script src="my-js/news.js"></script>
 <script type="text/javascript">
     $('.back-btn').click(function(){
-        window.location.href = 'news.html'
+        window.location.href = 'news-en.html'
     })
 </script>
 
