pc英文版图片

--- a/culture-en.html
+++ b/culture-en.html
@@ -403,7 +403,7 @@
 			</div>
 			<div class="content content3">
 				<div class="wow fadeInRight ani-time2" style="height: 100%">
-					<img src="images/culture/2-3.png">
+					<img src="images/culture/en-2-3.png">
 					<!-- <div class="content-box">
 						<div class="txt txt1">共识</div>
 						<div class="txt txt2">共担</div>
@@ -522,13 +522,13 @@
 		<img src="images/culture/5-1.jpg">
 		<div class="content content1 my-column-center">
 			<div class="wow fadeInLeft" style="height: 100%">
-				<img src="images/culture/5-2.png">
-				<div class="content-box">
+				<img src="images/culture/en-5-2.png">
+				<!-- <div class="content-box">
 					<div class="cont cont1">环境保护</div>
 					<div class="cont cont2">经济成果</div>
 					<div class="cont cont3">社会责任</div>
 					<div class="cont cont4">三重底线</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="content content2 my-column-center">
