--- a/m/profession-en.html
+++ b/m/profession-en.html
@@ -496,7 +496,7 @@
 					<img class="bg1" src="images/profession/bg1.png">
 					<div class="content-box">
 							<div class="img-a"><img src="images/profession/icon10-7.png"></div>
-						<div class="cont-text">工程学院</div>
+						<div class="cont-text">TC Academy</div>
 						
 					</div>
 				</div>
