--- a/news-detail-en.html
+++ b/news-detail-en.html
@@ -87,7 +87,7 @@
         </div>
     </section> -->
     <section>
-        <img src="images/news/banner.jpg">
+        <img src="images/news/en-banner.jpg">
     </section>
     <!--End Main Slider-->
     <section class="news-content">
@@ -105,7 +105,7 @@
             <div class="item-box"><img src="images/news/detail-1-5.jpg"></div>
         </div>
     </section>
-    <div class="back-box"><img class="back-btn" src="images/news/detail-1-6.jpg"></div>
+    <div class="back-box"><img class="back-btn" src="images/news/en-detail-1-6.jpg"></div>
 	<!--Main Footer-->
 	<div id="footerBox"></div>
 	<!--End Main Footer-->
