--- a/news-en.html
+++ b/news-en.html
@@ -114,7 +114,7 @@
         </div>
     </section> -->
     <section>
-        <img src="images/news/banner.jpg">
+        <img src="images/news/en-banner.jpg">
     </section>
     <!--End Main Slider-->
     <!--新闻列表-->
