--- a/profession-en.html
+++ b/profession-en.html
@@ -190,9 +190,9 @@
 }
 .section5 .content2 .cont1{
 	position: absolute;
-	top: 20px;
+	top: 10px;
 	left: 15px;
-	width: 20px;
+	/* width: 20px; */
 	font-size: 22px;
 }
 .section6{
@@ -336,7 +336,7 @@
 .section7 .content1 .cont2{
 	position: absolute;
     width: 50%;
-    bottom: 26%;
+    bottom: 18%;
     right: 5%;
 }
 .section7 .content2{
@@ -531,15 +531,15 @@
 			<div class="content2 wow fadeInUp100 ani-time3">
 				<div class="main-slider-carousel owl-carousel owl-theme">
 					<div class="slide">
-						<img src="images/profession/5-1.jpg">
+						<img src="images/profession/en-5-1.jpg">
 						<div class="cont1 my-color5">learn by doing</div>
 					</div>
 					<div class="slide">
-						<img src="images/profession/5-2.jpg">
+						<img src="images/profession/en-5-2.jpg">
 						<div class="cont1 my-color5">take responsibility</div>
 					</div>
 					<div class="slide">
-						<img src="images/profession/5-3.jpg">
+						<img src="images/profession/en-5-3.jpg">
 						<div class="cont1 my-color5">seek support</div>
 					</div>
 				</div>
@@ -558,10 +558,10 @@
 					<span></span>
 				</div>
 				<div class="cont3">
-					<img src="images/profession/icon6-1.png">
-					<div class="cont-text cont-text1">课程培训/Workshop/E-learning/在职学历教育</div>
+					<img src="images/profession/en-icon6-1.png">
+					<!-- <div class="cont-text cont-text1">课程培训/Workshop/E-learning/在职学历教育</div>
 					<div class="cont-text cont-text2">一对一辅导/360度评估反馈/导师机制</div>
-					<div class="cont-text cont-text3">岗位锻炼/授权/转换职能/负责新业务等</div>
+					<div class="cont-text cont-text3">岗位锻炼/授权/转换职能/负责新业务等</div> -->
 				</div>
 				<div class="cont4">
 					<div class="item-box item1">
@@ -583,7 +583,7 @@
 			</div>
 		</div>
 		<div class="content content2">
-			<div class="cont cont1 wow fadeInUp ani-time3"><img src="images/profession/icon6-5.png"></div>
+			<div class="cont cont1 wow fadeInUp ani-time3"><img src="images/profession/en-icon6-5.png"></div>
 			<div class="cont cont2 wow fadeInRight ani-time3">
 				<div class="cont-text1 font5 my-color5">Development Route for Employee</div>
 				<div class="cont-text2">Here employees could achieve their career goal mainly through three routes:
@@ -608,7 +608,7 @@
 					<div class="block2"></div>
 				</div>
 			</div>
-			<div class="cont2 wow fadeInUp100"><img src="images/profession/7-3.png"></div>
+			<div class="cont2 wow fadeInUp100"><img src="images/profession/en-7-3.png"></div>
 		</div>
 		<div class="content2 my-color1">
 			<div class="cont-box wow fadeInRight ani-time2">
@@ -669,7 +669,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-7.png"></div>
-							<div class="cont-text">工程学院</div>
+							<div class="cont-text">TC Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
