移动端英文版

--- a/m/news-detail-en.html
+++ b/m/news-detail-en.html
@@ -71,6 +71,7 @@
 </head>
 
 <body>
+<div id="root">
 <!-- Main Header-->
 <div id="headerBox" data-type="news-detail"></div>
 <!--End Main Header -->
@@ -88,7 +89,7 @@
         </div>
     </section> -->
     <section>
-        <img src="images/news/banner.jpg">
+        <img src="images/news/en-banner.jpg">
     </section>
     <!--End Main Slider-->
     <section class="news-content">
@@ -106,14 +107,14 @@
             <div class="item-box"><img src="images/news/banner.jpg"></div>
         </div>
     </section>
-    <div class="back-box"><img class="back-btn" src="images/news/detail-1-6.jpg"></div>
+    <div class="back-box"><img class="back-btn" src="images/news/en-detail-1-6.jpg"></div>
 	<!--Main Footer-->
 	<div id="footerBox"></div>
 	<!--End Main Footer-->
 	
 </div>
 <!--End pagewrapper-->
-
+</div>
 <script src="js/jquery.js"></script>
 <script src="my-js/common.js"></script>
 <script src="js/popper.min.js"></script>
