--- a/m/culture-en.html
+++ b/m/culture-en.html
@@ -224,7 +224,7 @@
 		<img src="images/culture/2-1.jpg" />
 		<div class="content content-box my-color1">
 			<div class="content1 wow fadeInDown"><strong class="my-font4">Happy Family Culture</strong><div>Soil</div></div>
-			<div class="content2 my-all-center"><img class="" src="images/culture/icon1.png" /></div>
+			<div class="content2 my-all-center"><img class="" src="images/culture/en-icon1.png" /></div>
 			<div class="content3 wow fadeInUp"><span>create and share</span><strong class="my-font4"> together-striver culture</strong><div>Foundation</div></div>
 		</div>
 	</section>
@@ -300,7 +300,7 @@
 		<img src="images/culture/6-1.jpg" />
 		<div class="content content-box">
 			<div class="content1 wow fadeInUp ani-time3">
-				<img src="images/culture/icon2.png" />
+				<img src="images/culture/en-icon2.png" />
 			</div>
 			<div class="content2 my-color1 wow fadeInUp">
 				<div class="cont1 my-font5">Social responsibility</div>
