--- a/m/news-detail.html
+++ b/m/news-detail.html
@@ -71,6 +71,7 @@
 </head>
 
 <body>
+<div id="root">
 <!-- Main Header-->
 <div id="headerBox" data-type="news-detail"></div>
 <!--End Main Header -->
@@ -113,7 +114,7 @@
 	
 </div>
 <!--End pagewrapper-->
-
+</div>
 <script src="js/jquery.js"></script>
 <script src="my-js/common.js"></script>
 <script src="js/popper.min.js"></script>
